--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,15 @@
 <body>
 <h3>Проект <a href="https://github.com/JavaWebinar/topjava" target="_blank">Java Enterprise (Topjava)</a></h3>
 <hr>
-<ul>
-    <li><a href="users">Users</a></li>
-    <li><a href="meals">Meals</a></li>
-</ul>
+<form method="get" action="users">
+    <h3>Войти как:</h3>
+    <label for="user1">User1
+        <input id="user1" type="radio" name="user" value="1">
+    </label>
+    <label for="user2">User2
+        <input id="user2" type="radio" name="user" value="2">
+    </label>
+    <input type="submit" value="Войти">
+</form>
 </body>
 </html>
